--- a/BookNote/深入理解 Java 虚拟机/第3章-垃圾收集器与内存分配策略.md
+++ b/BookNote/深入理解 Java 虚拟机/第3章-垃圾收集器与内存分配策略.md
@@ -380,395 +380,113 @@
 
 ### 3.5.3 Parallel Scavenge 收集器 
 
-Parallel Scavenge收集器也是一款新生代收集器，它同样是基于标记-复制算法实现的收集器，也是能够并行收集的多线程收集器
+　　Parallel Scavenge 收集器也是一款新生代收集器，它同样是基于标记 - 复制算法实现的收集器，也是能够并行收集的多线程收集器。
 
- 
+　　Parallel Scavenge 收集器的特点是它的关注点与其他收集器不同，CMS 等收集器的关注点是尽可能地缩短垃圾收集时用户线程的停顿时间，而 Parallel Scavenge 收集器的目标则是达到一个可控制的吞吐量（Throughput）。
 
- 
+　　吞吐量就是处理器用于运行用户代码的时间与处理器总消耗时间的比值，即：
 
-Parallel Scavenge收集器的特点是它的关注点与其他收集器不同，CMS等收集器的关注点是尽可能地缩短垃圾收集时用户线程的停顿时间，而Parallel Scavenge收集器的目标则是达到一个可控制的吞吐量（Throughput
+![](image/吞吐量.jpeg)
 
- 
+　　高吞吐量则可以最高效率地利用处理器资源，尽快完成程序的运算任务，主要适合在后台运算而不需要太多交互的分析任务。
 
- 
+　　Parallel Scavenge 收集器提供了两个参数用于精确控制吞吐量，分别是控制最大垃圾收集停顿时间的 -XX：MaxGCPauseMillis 参数以及直接设置吞吐量大小的 -XX：GCTimeRatio 参数。
 
-吞吐量就是处理器用于运行用户代码的时间与处理器总消耗时间的比值
+　　-XX：MaxGCPauseMillis 参数允许的值是一个大于 0 的毫秒数，收集器将尽力保证内存回收花费的时间不超过用户设定值。
 
- 
+　　垃圾收集停顿时间缩短是以牺牲吞吐量和新生代空间为代价换取的。
 
- 
+　　-XX：GCTimeRatio 参数的值则应当是一个大于 0 小于 100 的整数，也就是垃圾收集时间占总时间的比率，相当于吞吐量的倒数。 
 
-高吞吐量则可以最高效率地利用处理器资源，尽快完成程序的运算任务，主要适合在后台运算而不需要太多交互的分析任务。
+　　Parallel Scavenge 收集器也经常被称作 “ 吞吐量优先收集器 ” 。 
 
- 
+　　Parallel Scavenge 收集器还有一个参数 -XX：+UseAdaptiveSizePolicy ， 这是一个开关参数，当这个参数被激活之后，就不需要人工指定新生代的大小（-Xmn）、Eden 与 Survivor 区的比例（-XX：SurvivorRatio）、晋升老年代对象大小（-XX：PretenureSizeThreshold）等细节参数了，虚拟机会根据当前系统的运行情况收集性能监控信息，动态调整这些参数以提供最合适的停顿时间或者最大的吞吐量。这种调节方式称为**垃圾收集的自适应的调节策略**（GC Ergonomics）。只需要把基本的内存数据设置好（如 -Xmx 设置最大堆），然后使用 -XX：MaxGCPauseMillis 参数（更关注最大停顿时间）或 -XX：GCTimeRatio（更关注吞吐量）参数给虚拟机设立一个优化目标，那具体细节参数的调节工作就由虚拟机完成了。
 
- 
+　　自适应调节策略也是 Parallel Scavenge 收集器区别于 ParNew 收集器的一个重要特性。
 
-Parallel Scavenge收集器提供了两个参数用于精确控制吞吐量，分别是控制最大垃圾收集停顿时间的-XX：MaxGCPauseMillis参数以及直接设置吞吐量大小的-XX：GCTimeRatio参数。
+### 3.5.4 Serila Old 收集器
 
- 
+　　Serial Old 是 Serial 收集器的老年代版本，它同样是一个单线程收集器，使用标记 - 整理算法。这个收集器供客户端模式下的 HotSpot 虚拟机使用。
 
- 
+　　在服务端模式下，它也可能有两种用途：
 
--XX：MaxGCPauseMillis参数允许的值是一个大于0的毫秒数，收集器将尽力保证内存回收花费的时间不超过用户设定值
+1. 一种是在 JDK 5 以及之前的版本中与 Parallel Scavenge 收集器搭配使用。
+2. 另外一种就是作为 CMS 收集器发生失败时的后备预案，在并发收集发生 Concurrent Mode Failure 时使用。
 
- 
+### 3.5.5 Parallel Old 收集器 
 
- 
+　　Parallel Old 是 Parallel Scavenge 收集器的老年代版本，支持多线程并发收集，基于标记 - 整理算法实现。
 
-垃圾收集停顿时间缩短是以牺牲吞吐量和新生代空间为代价换取的
+　　这个收集器直到 JDK 6 时才开始提供的。
 
- 
+　　如果新生代选择了 Parallel Scavenge 收集器，老年代除了 Serial Old（PS MarkSweep）收集器以外别无选择，其他表现良好的老年代收集器，如 CMS 无法与它配合工作。由于老年代 Serial Old 收集器在服务端应用性能上的 “ 拖累 ”，使用 Parallel Scavenge 收集器也未必能在整体上获得吞吐量最大化的效果。同样，由于单线程的老年代收集中无法充分利用服务器多处理器的并行处理能力，在老年代内存空间很大而且硬件规格比较高级的运行环境中，这种组合的总吞吐量甚至不一定比 ParNew 加 CMS 的组合来得优秀。
 
- 
+　　直到 Parallel Old 收集器出现后，“ 吞吐量优先 ” 收集器终于有了比较名副其实的搭配组合，在注重吞吐量或者处理器资源较为稀缺的场合，都可以优先考虑 Parallel Scavenge 加 Parallel Old 收集器这个组合。
 
--XX：GCTimeRatio参数的值则应当是一个大于0小于100的整数，也就是垃圾收集时间占总时间的比率，相当于吞吐量的倒数
+![](image/ParallelScavenge或ParallelOld收集器运行示意图.jpeg) 
 
- 
+### 3.5.6 CMS 收集器
 
- 
+　　CMS（Concurrent Mark Sweep）收集器是一种以获取最短回收停顿时间为目标的收集器。
 
-Parallel Scavenge收集器也经常被称作“吞吐量优先收集器”
+　　系统停顿时间尽可能短，以给用户带来良好的交互体验。CMS 收集器就非常符合这类应用的需求。
 
- 
+　　CMS 收集器是基于标记 - 清除算法实现，整个过程分为四个步骤，包括：
 
- 
+1. 初始标记（CMS initialmark）
+2. 并发标记（CMS concurrent mark）
+3. 重新标记（CMS remark）
+4. 并发清除（CMS concurrent sweep）
 
-Parallel Scavenge收集器还有一个参数-XX：+UseAdaptiveSizePolicy
+　　初始标记、重新标记这两个步骤仍然需要 “ Stop The World ”。初始标记仅仅只是标记一下 GC Roots 能直接关联到的对象，速度很快。
 
- 
+　　并发标记阶段就是从 GC Roots 的直接关联对象开始遍历整个对象图的过程，这个过程耗时较长但是不需要停顿用户线程，可以与垃圾收集线程一起并发运行。
 
- 
+　　重新标记阶段则是为了修正并发标记期间，因用户程序继续运作而导致标记产生变动的那一部分对象的标记记录，这个阶段停顿时间通常会比初始标记阶段稍长一些，但也远比并发标记阶段的时间短。
 
-这是一个开关参数，当这个参数被激活之后，就不需要人工指定新生代的大小（-Xmn）、Eden与Survivor区的比例（-XX：SurvivorRatio）、晋升老年代对象大小（-XX：PretenureSizeThreshold）等细节参数了，虚拟机会根据当前系统的运行情况收集性能监控信息，动态调整这些参数以提供最
+　　并发清除阶段，清理删除掉标记阶段判断的已经死亡的对象，由于不需要移动存活对象，所以这个阶段也是可以与用户线程同时并发的。
 
- 
+　　耗时最长的并发标记和并发清除阶段中，垃圾收集器线程都可以与用户线程一起工作，所以从总体上来说，CMS收集器的内存回收过程是与用户线程一起并发执行的。
 
- 
+ 　　Concurrent Mark Sweep 收集器运行示意图：
 
-合适的停顿时间或者最大的吞吐量。这种调节方式称为垃圾收集的自适应的调节策略（GC Ergonomics）
+![](image/ConcurrentMarkSweep收集器运行示意图.jpeg) 
 
- 
+ 　　CMS 收集器的优点：并发收集、低停顿。
 
- 
+ 　　CMS 收集器的缺点：
 
-只需要把基本的内存数据设置好（如-Xmx设置最大堆），然后使用-XX：MaxGCPauseMillis参数（更关注最大停顿时间）或-XX：GCTimeRatio（更关注吞吐量）参数给虚拟机设立一个优化目标，那具体细节参数的调节工作就由虚拟机完成了
+1. CMS收集器对处理器资源非常敏感。
 
- 
+   在并发阶段，它虽然不会导致用户线程停顿，但却会因为占用了一部分线程（或者说处理器的计算能力）而导致应用程序变慢，降低总吞吐量。
 
- 
+   CMS 默认启动的回收线程数是（处理器核心数量+3）/4，也就是说，如果处理器核心数在四个或以上，并发回收时垃圾收集线程只占用不超过 25% 的处理器运算资源，并且会随着处理器核心数量的增加而下降。但是当处理器核心数量不足四个时，CMS 对用户程序的影响就可能变得很大。如果应用本来的处理器负载就很高，还要分出一半的运算能力去执行收集器线程，就可能导致用户程序的执行速度忽然大幅降低。
 
-自适应调节策略也是Parallel Scavenge收集器区别于ParNew收集器的一个重要特性。
+   为了缓解这种情况，虚拟机提供了一种称为 “ 增量式并发收集器”（Incremental Concurrent Mark Sweep/i-CMS）的 CMS 收集器变种，所做的事情和以前单核处理器年代 PC 机操作系统靠抢占式多任务来模拟多核并行多任务的思想一样，是在并发标记、清理的时候让收集器线程、用户线程交替运行，尽量减少垃圾收集线程的独占资源的时间，这样整个垃圾收集的过程会更长，但对用户程序的影响就会显得较少一些。
 
- 
+   从 JDK 7 开始，i-CMS 模式已经被声明为 “deprecated”，即已过时不再提倡用户使用，到 JDK 9 发布后 i-CMS 模式被完全废弃。
 
- 
+2. 由于 CMS 收集器无法处理 “ 浮动垃圾 ”（Floating Garbage），有可能出现 “ Con-current Mode Failure ” 失败进而导致另一次完全 “ Stop The World ” 的 Full GC 的产生。
 
-Serial Old是Serial收集器的老年代版本，它同样是一个单线程收集器，使用标记-整理算法
+   在 CMS 的并发标记和并发清理阶段，用户线程是还在继续运行的，程序在运行自然就还会伴随有新的垃圾对象不断产生，但这一部分垃圾对象是出现在标记过程结束以后，CMS 无法在当次收集中处理掉它们，只好留待下一次垃圾收集时再清理掉。这一部分垃圾就称为“浮动垃圾“。
 
- 
+   由于在垃圾收集阶段用户线程还需要持续运行，那就还需要预留足够内存空间提供给用户线程使用，因此 CMS 收集器不能像其他收集器那样等待到老年代几乎完全被填满了再进行收集，必须预留一部分空间供并发收集时的程序运作使用。
 
- 
+   在 JDK 5 的默认设置下，CMS 收集器当老年代使用了 68% 的空间后就会被激活，可以适当调高参数 -XX：CMSInitiatingOccupancyFraction 的值来提高 CMS 的触发百分比，降低内存回收频率，获取更好的性能。
 
-供客户端模式下的HotSpot虚拟机使用
+   到了 JDK 6 时，CMS 收集器的启动阈值就已经默认提升至92%。
 
- 
+   但是，要是 CMS 运行期间预留的内存无法满足程序分配新对象的需要，就会出现一次 “ 并发失败 ”（Concurrent Mode Failure），这时候虚拟机将不得不启动后备预案：冻结用户线程的执行，临时启用 Serial Old 收集器来重新进行老年代的垃圾收集，但这样停顿时间就很长了。
 
- 
+   所以参数 -XX：CMSInitiatingOccupancyFraction 设置得太高将会很容易导致大量的并发失败产生，性能反而降低，用户应在生产环境中根据实际应用情况来权衡设置。
 
-在服务端模式下，它也可能有两种用途：一种是在JDK 5以及之前的版本中与Parallel Scavenge收集器搭配使用[插图]，另外一种就是作为CMS收集器发生失败时的后备预案，在并发收集发生Concurrent Mode Failure时使用
+3. CMS 是一款基于“标记-清除”算法实现的收集器。这就意味着收集结束时会有大量空间碎片产生。空间碎片过多时，将会给大对象分配带来很大麻烦，往往会出现老年代还有很多剩余空间，但就是无法找到足够大的连续空间来分配当前对象，而不得不提前触发一次 Full GC 的情况。
 
- 
+   CMS 收集器提供了一个 -XX：+UseCMS-CompactAtFullCollection 开关参数（默认是开启的，此参数从 JDK 9 开始废弃），用于在 CMS 收集器不得不进行 Full GC 时开启内存碎片的合并整理过程，由于这个内存整理必须移动存活对象，（在 Shenandoah 和 ZGC 出现前）是无法并发的。
 
- 
+   参数 -XX：CMSFullGCsBefore-Compaction（此参数从JDK 9开始废弃），这个参数的作用是要求CMS收集器在执行过若干次（数量由参数值决定）不整理空间的 Full GC 之后，下一次进入 Full GC 前会先进行碎片整理（默认值为 0，表示每次进入 Full GC 时都进行碎片整理）。 
 
-Parallel Old是Parallel Scavenge收集器的老年代版本，支持多线程并发收集，基于标记-整理算法实现
-
- 
-
- 
-
-JDK 6
-
- 
-
- 
-
-如果新生代选择了Parallel Scavenge收集器，老年代除了Serial Old（PS MarkSweep）收集器以外别无选择，其他表现良好的老年代收集器，如CMS无法与它配合工作。由于老年代Serial Old收集器在服务端应用性能上的“拖累”，使用Parallel Scav
-
- 
-
- 
-
-enge收集器也未必能在整体上获得吞吐量最大化的效果。同样，由于单线程的老年代收集中无法充分利用服务器多处理器的并行处理能力，在老年代内存空间很大而且硬件规格比较高级的运行环境中，这种组合的总吞吐量甚至不一定比ParNew加CMS的组合来得优秀
-
- 
-
- 
-
-直到Parallel Old收集器出现后，“吞吐量优先”收集器终于有了比较名副其实的搭配组合，在注重吞吐量或者处理器资源较为稀缺的场合，都可以优先考虑Parallel Scavenge加Parallel Old收集器这个组合
-
- 
-
- 
-
-CMS（Concurrent Mark Sweep）收集器是一种以获取最短回收停顿时间为目标的收集器
-
- 
-
- 
-
-系统停顿时间尽可能短，以给用户带来良好的交互体验。CMS收集器就非常符合这类应用的需求
-
- 
-
- 
-
-CMS收集器是基于标记-清除算法实现
-
- 
-
- 
-
-整个过程分为四个步骤，包括：
-
- 
-
- 
-
-1）初始标记（CMS initial
-
- 
-
- 
-
-mark）2）并发标记（CMS concurrent mark）3）重新标记（CMS remark）4）并发清除（CMS concurrent sweep）
-
- 
-
- 
-
-初始标记、重新标记这两个步骤仍然需要“Stop The World”
-
- 
-
- 
-
-初始标记仅仅只是标记一下GC Roots能直接关联到的对象，速度很快；并发标记阶段就是从GC Roots的直接关联对象开始遍历整个对象图的过程，这个过程耗时较长但是不需要停顿用户线程，可以与垃圾收集线程一起并发运行
-
- 
-
- 
-
-重新标记阶段则是为了修正并发标记期间，因用户程序继续运作而导致标记产生变动的那一部分对象的标记记录
-
- 
-
- 
-
-停顿时间通常会比初始标记阶段稍长一些，但也远比并发标记阶段的时间短
-
- 
-
- 
-
-并发清除阶段，清理删除掉标记阶段判断的已经死亡的对象，由于不需要移动存活对象，所以这个阶段也是可以与用户线程同时并发的
-
- 
-
- 
-
-耗时最长的并发标记和并发清除阶段中，垃圾收集器线程都可以与用户线程一起工作
-
- 
-
- 
-
-CMS收集器的内存回收过程是与用户线程一起并发执行的
-
- 
-
- 
-
-优点
-
- 
-
- 
-
-并发收集、低停顿
-
- 
-
- 
-
-缺点：
-
- 
-
- 
-
-CMS收集器对处理器资源非常敏感
-
- 
-
- 
-
-虽然不会导致用户线程停顿，但却会因为占用了一部分线程（或者说处理器的计算能力）而导致应用程序变慢，降低总吞吐量
-
- 
-
- 
-
-CMS默认启动的回收线程数是（处理器核心数量+3）/4，
-
- 
-
- 
-
-如果处理器核心数在四个或以上，并发回收时垃圾收集线程只占用
-
- 
-
- 
-
-不超过25%的处理器运算资源，并且会随着处理器核心数量的增加而下降。但是当处理器核心数量不足四个时，CMS对用户程序的影响就可能变得很大
-
- 
-
- 
-
-。如果应用本来的处理器负载就很高，还要分出一半的运算能力去执行收集器线程，就可能导致用户程序的执行速度忽然大幅降低
-
- 
-
- 
-
-增量式并发收集器”（Incremental Concurrent Mark Sweep/i-CMS）的CMS收集器变种，
-
- 
-
- 
-
-所做的事情和以前单核处理器年代PC机操作系统靠抢占式多任务来模拟多核并行多任务的思想一样
-
- 
-
- 
-
-是在并发标记、清理的时候让收集器线程、用户线程交替运行，尽量减少垃圾收集线程的独占资源的时间，这样整个垃圾收集的过程会更长，但对用户程序的影响就
-
- 
-
- 
-
-会显得较少一些
-
-微信读书
-
-深入理解Java虚拟机：JVM高级特性与最佳实践（第3版）
-
-周志明
-
-56个笔记
-
-3.5 经典垃圾收集器
-
- 
-
-从JDK 7开始，i-CMS模式已经被声明为“deprecated”，即已过时不再提倡用户使用，到JDK 9发布后i-CMS模式被完全废弃。
-
- 
-
- 
-
-由于CMS收集器无法处理“浮动垃圾”（Floating Garbage），有可能出现“Con-current Mode Failure”失败进而导致另一次完全“Stop The World”的Full GC的产生
-
- 
-
- 
-
-在CMS的并发标记和并发清理阶段，用户线程是还在继续运行的，程序在运行自然就还会伴随有新的垃圾对象不断产生，但这一部分垃圾对象是出现在标记过程结束以后，CMS无法在当次收集中处理掉它们，只好留待
-
- 
-
- 
-
-下一次垃圾收集时再清理掉。这一部分垃圾就称为“浮动垃圾
-
- 
-
- 
-
-由于在垃圾收集阶段用户线程还需要持续运行，那就还需要预留足够内存空间提供给用户线程使用，因此CMS收集器不能像其他收集器那样等待到老年代几乎完全被填满了再进行收集，必须预留一部分空间供并发收集时的程序运作使用
-
- 
-
- 
-
-JDK 5的默认设置下，CMS收集器当老年代使用了68%的空间后就会被激活
-
- 
-
- 
-
-可以适当调高参数-XX：CMSInitiatingOccu-pancyFraction的值来提高CMS的触发百分比，降低内存回收频率，获取更好的性能
-
- 
-
- 
-
-到了JDK 6时，CMS收集器的启动阈值就已经默认提升至92%
-
- 
-
- 
-
-要是CMS运行期间预留的内存无法满足程序分配新对象的需要，就会出现一次“并发失败”（Concurrent Mode Failure），这时候虚拟机将不得不启动后备预案：冻结用户线程的执行，临时启用Serial Old收集器来重新进行老年代的垃圾收集，但这样停顿时间就很长了
-
- 
-
- 
-
-以参数-XX：CMSInitiatingOccupancyFraction设置得太高将会很容易导致大量的并发失败产生，性能反而降低，用户应在生产环境中根据实际应用情况来权衡设置。
-
- 
-
- 
-
-CMS是一款基于“标记-清除”算法实现的收集器
-
- 
-
- 
-
-收集结束时会有大量空间碎片产生。空间碎片过多时，将会给大对
-
- 
-
- 
-
-象分配带来很大麻烦，往往会出现老年代还有很多剩余空间，但就是无法找到足够大的连续空间来分配当前对象，而不得不提前触发一次Full GC的情况
-
- 
-
- 
-
-CMS收集器提供了一个-XX：+UseCMS-CompactAtFullCollection开关参数（默认是开启的，此参数从JDK 9开始废弃），用于在CMS收集器不得不进行Full GC时开启内存碎片的合并整理过程，由于这个内存整理必须移动存活对象，（在Shenandoah和ZGC出现前）是无法并发的
-
- 
-
- 
-
-XX：CMSFullGCsBefore-Compaction（此参数从JDK 9开始废弃），这个参数的作用是要求CMS收集器在执行过若干次
-
- 
-
- 
-
-数量由参数值决定）不整理空间的Full GC之后，下一次进入Full GC前会先进行碎片整理（默认值为0，表示每次进入Full GC时都进行碎片整理）。
-
- 
+### 3.5.7 Garbage First 收集器
 
  
 
