--- a/network/网络常见问题.md
+++ b/network/网络常见问题.md
@@ -2,17 +2,17 @@
 
 ### 1. GET 和 POST 的区别，还有哪些其他请求？
 
-**GET 和 POST 的区别**：
+#### 1.1. GET 和 POST 的区别
 
-1. GET 方法用于信息获取，它丢与数据库方面是安全的（没有修改信息），而 POST 方法是用于修改服务器上资源的请求。
-2. GET 请求的数据回附在 URL 之后，而 POST 方法提交的数据则放置在 HTTP 报文实体的实体中，所以 POST 方法的安全性比 GET 方法要高。
+1. GET 方法用于信息获取，它对于数据库方面是安全的（没有修改信息），而 POST 方法是用于修改服务器上资源的请求。
+2. GET 请求的数据会附在 URL 之后，而 POST 方法提交的数据则放置在 HTTP 报文实体的实体中，所以 POST 方法的安全性比 GET 方法要高。
 3. GET 方法传输的数据量一般限制在 2 KB，其原因在于：GET 式通过 URL 提交数据，而 URL 本身对数据没有限制，但是不同的浏览器对于 URL 是有限制的，真正的限制取决于操作系统本身；而 POST 方法对于数据大小是无限制的，真正影响到数据大小的是服务器处理程序的能力。
 
-**其他请求**：
+#### 1.2. 其他请求
 
 1. GET：请求指定的页面信息，并返回实体主体。
 2. HEAD：类似于 GET 请求，只不过返回的响应中没有具体的内容，用于获取报头。
-3. POST：向指定资源提交数据进行处理请求（例如提交表单或者上传文件）。数据被包含在请求体重。POST 请求可能会导致新的资源的建立或已有资源的修改。
+3. POST：向指定资源提交数据进行处理请求（例如提交表单或者上传文件）。数据被包含在请求体中。POST 请求可能会导致新的资源的建立或已有资源的修改。
 4. PUT：从客户端向服务器传送的数据取代指定的文档的内容。
 5. DELETE：请求服务器删除指定的页面。
 6. CONNECT：要求用隧道协议连接代理。
@@ -24,15 +24,15 @@
 
 1. HTTP 是超文本传输协议，信息是明文传输，数据都是未加密的，安全性较差，连接很简单，是无状态的；HTTPS 协议是由 SSL+HTTP 协议构建的具有安全性的传输协议，数据传输过程是加密的，安全性较好。
 2. HTTP 使用的端口是 80，HTTPS 使用的端口是 443。
-3. HTTP 页面响应速度比 HTTPS 快，主要是因为 HTTP 使用 TCP 三次握手建立连接，客户端和服务器需要交换 3 个包，二 HTTPS 除了 TCP 的三个包，还要加上 ssl 握手需要的 9 个包，所以一共是 12 个包。
-4. HTTPS 其实就是建构在 SSL.TLS 之上的 HTTP 协议，所以，HTTPS 要比 HTTP 更耗费服务器资源。
+3. HTTP 页面响应速度比 HTTPS 快，主要是因为 HTTP 使用 TCP 三次握手建立连接，客户端和服务器需要交换 3 个包，而 HTTPS 除了 TCP 的三个包，还要加上 ssl 握手需要的 9 个包，所以一共是 12 个包。
+4. HTTPS 其实就是建构在 SSL/TLS 之上的 HTTP 协议，所以，HTTPS 要比 HTTP 更耗费服务器资源。
 5. 使用 HTTPS 协议需要到 CA（Certificate Authority，数字证书认证机构）申请证书，一般免费证书很少，因此需要一定费用。
 
 ### 3. IPv4 和 IPv6 的区别，特点
 
 　　IPv4 和 IPv6 都属于 “互联网协议”。
 
-　　IP 地址有两个标准：IP 版本 4（IPv4）和 IP 版本 6（IPv6）。所有有 IP 地址的计算机都有 IPv4 地址，许多及玄机也开始使用新的 IPv6 地址系统。
+　　IP 地址有两个标准：IP 版本 4（IPv4）和 IP 版本 6（IPv6）。所有有 IP 地址的计算机都有 IPv4 地址，许多机器也开始使用新的 IPv6 地址系统。
 
 　　IPv4 是互联网协议（Internet Protocol，IP）的第四版。IPv6 是 互联网协议（Internet Protocol，IP）的第六版，IPv6 是 IETF（互联网工作任务组，Internet Engineering Task Force）设计的用于替代现行版本 IP 协议（IPv4）的下一代 IP 协议。
 
@@ -68,13 +68,13 @@
 
 4. IPv6 加入了对自动配置（Auto Configuration）的支持。
 
-   这是对 DHCP 协议的改进和扩展，使得网络（尤其是局域网）的管理更加方便和快捷。
+   这是对 DHCP（动态主机配置协议，用于动态获取 IP 地址及其他配置信息） 协议的改进和扩展，使得网络（尤其是局域网）的管理更加方便和快捷。
 
 5. IPv6 具有更高的安全性。
 
    在使用 IPv6 网络中，用户可以对网络层的数据进行加密并对 IP 报文进行校验，这极大地增强了网络安全。
 
-6. IP6 允许协议扩充。
+6. IPv6 允许协议扩充。
 
 7. IPv6 使用新的头部格式，简化和加速了路由选择过程，因为大多数的现象不需要由路由选择。
 
@@ -84,29 +84,29 @@
 
 ![](./TCP与UDP/image/三次握手.png)
 
-1. 第一次握手：TCP 西医会组建一个数据包，并将标志位 SYN 置为 1，标识该数据包是用来建立同步连接的。同时生成一个随机数字 J，填充 ”序号（Seq）“ 字段 Seq = J，标识该数据包的序号。完成这些工作，将该数据包发送给服务器端，客户端就进入了 SYN_SEND 状态，等待 Server 确认。
+1. 第一次握手：TCP 协议会组建一个数据包，并将标志位 SYN 置为 1，标识该数据包是用来建立同步连接的。同时生成一个随机数字 J，填充 ” 序号（Seq）“ 字段 Seq = J，标识该数据包的序号。完成这些工作，将该数据包发送给服务器端，客户端就进入了 SYN_SEND 状态，等待 Server 确认。
 
-2. 第二次握手：服务器收到数据包，检测到已经设置了 SYN 标志位，就知道这是客户端发来的建立连接的 ”请求包“。服务器端也会组建一个数据包，并将标志位 SYN 和 ACK 置为 1，填充序号字段 Ack = J+1，随机产生一个值 Seq = K，并将数据包发送给 Client 已确认连接请求，Server 进入 SYN_RECV 状态。
+2. 第二次握手：服务器收到数据包，检测到已经设置了 SYN 标志位，就知道这是客户端发来的建立连接的 ”请求包“。服务器端也会组建一个数据包，并将标志位 SYN 和 ACK 置为 1，填充序号字段 Ack = J+1，随机产生一个值 Seq = K，并将数据包发送给 Client 以确认连接请求，Server 进入 SYN_RECV 状态。
 
    SYN 标识该数据包用来建立连接，ACK 用来确认收到了刚才客户端发送的数据包。
 
-3. 第三次握手：客户端收到数据包，检测到已经设置了 SYN 和 ACK 标志位，就知道这是服务器发来的 ”确认包“。客户端会检测 ”确认号（Ack）“ 字段，看它的值是否为 J+1，如果是就说明连接建立成功，接着，客户端会继续组建数据包，并将标志位 ACK 设置为 1，标识客户端正确接受了服务器发来的 ” 确认号 “。同时，将刚才服务器发来的数据包序号 K 加 1，用这个数字来填充 ” 确认号（Ack） “ 字段。最后客户端将数据包发出，进入 ESTABLISED 状态，并分配资源，标识连接已经成功建立。
+3. 第三次握手：客户端收到数据包，检测到已经设置了 SYN 和 ACK 标志位，就知道这是服务器发来的 ” 确认包 “。客户端会检测 ” 确认号（Ack）“ 字段，看它的值是否为 J+1，如果是就说明连接建立成功，接着，客户端会继续组建数据包，并将标志位 ACK 设置为 1，标识客户端正确接受了服务器发来的 ” 确认号 “。同时，将刚才服务器发来的数据包序号 K 加 1，用这个数字来填充 ” 确认号（Ack） “ 字段。最后客户端将数据包发出，进入 ESTABLISED 状态，并分配资源，标识连接已经成功建立。
 
-   服务端收到数据包，检测到已经设置了 ACK 标志位，就知道这是客户端发来的 ”确认包“。服务器会检测 ” 确认号（Ack）“ 字段，看它的值是否为 K+1，如果是就说明链接成功，服务器进入 ESTABLISED 状态。
+   服务端收到数据包，检测到已经设置了 ACK 标志位，就知道这是客户端发来的 ” 确认包 “。服务器会检测 ” 确认号（Ack）“ 字段，看它的值是否为 K+1，如果是就说明连接成功，服务器进入 ESTABLISED 状态。
 
-　　至此，客户端和服务器都进入了 ESTABLISED 状态，完成了三次握手，链接建立成功，接下来客户端和服务器之间就可以传输数据了。
+　　至此，客户端和服务器都进入了 ESTABLISED 状态，完成了三次握手，连接建立成功，接下来客户端和服务器之间就可以传输数据了。
 
 ##### 4.1.1. 为什么是三次握手
 
-　　三次握手是为了防止已失效的连接请求报文段突然又传送到服务端，因为产生错误。
+　　三次握手是为了防止已失效的连接请求报文段突然又传送到服务端，因此产生错误。
 
-　　比如：client 发出的第一个连接请求报文段并没有丢失，而是在某个网络节点长时间的滞留了，以致延误到连接释放以后的某个事件才到达 Server。本来这是一个早已失效的报文段，但是 server 收到此失效的连接请求报文段后，就误认为是 client 再次发出的一个新的连接请求，于是就向 client 发出确认报文段，统一建立连接。假设不采用 “ 三次握手 ”，那么只要 server 发出确认，新的连接就建立了，由于 client 并没有发出建立连接的请求，因此不理睬 server 的确认，也不会向 server 发送数据，但 server 却认为新的传输连接已经建立，并一直等待 client 发来数据。所以没有采用 “ 三次握手 ”，这种情况下 server 的很多资源就拜拜浪费掉了。
+　　比如：client 发出的第一个连接请求报文段并没有丢失，而是在某个网络节点长时间的滞留了，以致延误到连接释放以后的某个时间才到达 Server。本来这是一个早已失效的报文段，但是 server 收到此失效的连接请求报文段后，就误认为是 client 再次发出的一个新的连接请求，于是就向 client 发出确认报文段，同意建立连接。假设不采用 “ 三次握手 ”，那么只要 server 发出确认，新的连接就建立了，由于 client 并没有发出建立连接的请求，因此不理睬 server 的确认，也不会向 server 发送数据，但 server 却认为新的传输连接已经建立，并一直等待 client 发来数据。所以没有采用 “ 三次握手 ”，这种情况下 server 的很多资源就白白浪费掉了。
 
 #### 4.2. 四次挥手
 
 ![](./TCP与UDP/image/四次挥手.png)
 
-1. 第一次挥手：客户端向服务器发送 FIN 数据包，设置 FIN 标志位为 1，序号为 M，用来关闭客户端到服务器的数据发送，客户端进入 FIN_WAIT_1 状态。
+1. 第一次挥手：客户端向服务器发送 FIN 数据包，设置 FIN 标志位，序号为 M，用来关闭客户端到服务器的数据发送，客户端进入 FIN_WAIT_1 状态。
 
    FIN 是 Finish 的缩写，表示完成任务需要断开连接。
 
@@ -118,7 +118,7 @@
 
    这个时候服务器还是可以向客户端发送数据的。客户端也是会接收服务器发送来的数据，但是客户端不会再向服务器发送数据。
 
-3. 第三次挥手：等待片刻后，服务器准备完毕，可以断开连接，于是再主动向客户端发送 FIN 包，设置标志位 FIN 为 1，序号为 N，用于关闭服务器到客户端的数据传送，然后进入 LAST_ACK 状态。
+3. 第三次挥手：等待片刻后，服务器准备完毕，可以断开连接，于是再主动向客户端发送 FIN 包，设置标志位 FIN，序号为 N，用于关闭服务器到客户端的数据传送，然后进入 LAST_ACK 状态。
 
 4. 第四次挥手：客户端收到服务器的 FIN 包后，会再向服务器发送 ACK 包，确认序号为 N+1，告诉服务器断开连接，客户端进入 TIME_WAIR 状态。
 
@@ -134,8 +134,8 @@
 
 1. TCP 是传输控制协议，UDP 是用户数据报协议。
 
-2. TCP 是面向连接的、可靠的、基于字节流的通信协议，数据在传输前通过三次握手建立连接，传输完成后要四次挥手断开连接；UDP 是面向无连接的通信协议，传输数据之前源端和终端不建立连接，在通讯时不需要接收方确认，也无需建立连接，属于不可靠的传输，无法保证正确性，可能会出现丢包现象。
-3. TCP 是面向连接的只能用于一对一的通讯，UDP 可以用于一对多、多对多的通讯。
+2. TCP 是面向连接的、可靠的、基于字节流的通信协议，数据在传输前通过三次握手建立连接，传输完成后要四次挥手断开连接；UDP 是面向无连接的通信协议，传输数据之前源端和终端不建立连接，在通讯时不需要接收方确认，属于不可靠的传输，无法保证正确性，可能会出现丢包现象。
+3. TCP 是面向连接的，只能用于一对一的通讯；UDP 可以用于一对多、多对多的通讯。
 
 ### 6. 四层协议分别是什么？以及说明具有代表性的协议？
 
@@ -145,21 +145,21 @@
 
    HTTP：超文本传输协议，互联网上应用最为广泛的一种网络协议。
 
-   DHCP：动态主机设置协议，是一个局域网的网络协议，使用 UDP 协议工作，主要有两个用途：给内部网络或网络服务供应商自动分配 IP 地址，给用户或者内部网络管理员作为对所有计算机作中央管理的手段。
+   DHCP：动态主机设置协议，是一个局域网的网络协议，使用 UDP 协议工作，主要有两个用途：给内部网络或网络服务供应商自动分配 IP 地址，给用户或者内部网络管理员作为对所有计算机做中央管理的手段。
 
 2. 传输层：负责进程中端对端通信。
 
    TCP：传输控制协议，一种面向连接、可靠的、基于字节流的通信协议，通过三次握手建立连接，通讯完成时通过四次挥手断开连接。
 
-   UDP：用户数据报协议，是面向无连接的通讯协议。
+   UDP：用户数据报协议，是面向无连接的通信协议。
 
 3. 网络层：服务把报文分组发送到目的主机（1. 处理来自传输层的发送请求，2.处理接收的数据，3.处理互联的路径、流控和拥塞问题）
 
-   IP：因特网互联协议，为上可载送传输层各种协议的信息，例如 TCP、UDP 等，对下可将 IP 信心包放到链路层，通过以太网、令牌环网络等各种技术来传送。设计 IP 的目的是提供网络的可扩展性：1.解决互联网问题，实现大规模、异构网络的互联互通；2.分割顶层网络应用和底层网络技术之间的耦合关系，以利于两者的独立发展。IP 为主机提供一种无连接、不可靠的、尽力而为的数据报传输服务。
+   IP：因特网互联协议，为上可载送传输层各种协议的信息，例如 TCP、UDP 等，对下可将 IP 信息包放到链路层，通过以太网、令牌环网络等各种技术来传送。设计 IP 的目的是提供网络的可扩展性：1.解决互联网问题，实现大规模、异构网络的互联互通；2.分割顶层网络应用和底层网络技术之间的耦合关系，以利于两者的独立发展。IP 为主机提供一种无连接、不可靠的、尽力而为的数据报传输服务。
 
    ARP：地址解析协议，根据 IP 地址获取物理地址的一个 TCP/IP 协议。
 
-   RARP：逆地址解析协议，将局域网中某个注意的物理地址转换为 IP 地址。
+   RARP：逆地址解析协议，将局域网中某个已知的物理地址转换为 IP 地址。
 
 4. 网络接口层：负责通过网络发送数据和接收 IP 报文。
 
@@ -183,11 +183,11 @@
 2. 如果 1 中未找到，那么 Chrome 会搜索操作系统自身的 DNS 缓存（可以在命令行下使用 ipconfig /displaydns 查看）。如果找到且没有过期则成功。
 3. 如果 2 中未找到，那么尝试读取位于 C:\Windows\System32\drivers\etc 下的 hosts 文件，如果找到对应的 IP 地址则解析成功。
 4. 如果 3 中未找到。浏览器首先会找 TCP/IP 参数中设置的本地 DNS 服务器，如果要查询的域名包含在本地配置的区域资源中，则完成域名解析，否则根据本地 DNS 服务器会请求根 DNS 服务器。
-5. 本地 DNS 会把请求发至 13 台根 DNS，根 DNS 服务器收到请求后会返回负责这个域名（.net）的服务器的一个 IP，本地 DNS 服务器使用该 IP 信息联系负责 .net 域的这要服务器。这台负责 .net 域的服务器收到请求后，如果自己无法解析，会返回 .net 域的下一级 DNS 服务器地址（blog.csdn.net）给本地 DNS 服务器。以此类推，直至找到。
+5. 本地 DNS 会把请求发至 13 台根 DNS，根 DNS 服务器收到请求后会返回负责这个域名（.net）的服务器的一个 IP，本地 DNS 服务器使用该 IP 信息联系负责 .net 域的这台服务器。这台负责 .net 域的服务器收到请求后，如果自己无法解析，会返回 .net 域的下一级 DNS 服务器地址（blog.csdn.net）给本地 DNS 服务器。以此类推，直至找到。
 
 #### 7.2. TCP 的三次握手
 
-　　HTTP 是基于 TCP 的，在传送数据之前会通过三次握手浏览器和服务器建立建立。
+　　HTTP 是基于 TCP 的，在传送数据之前会通过三次握手浏览器和服务器建立连接。
 
 #### 7.3. 建立 TCP 连接后发起 HTTP 请求
 
@@ -207,7 +207,7 @@
 
 ##### 7.3.2. 服务器响应 HTTP 请求
 
-　　服务器接收处理完请求后返回一个 HTTP 响应消息给客户端。HTTP 响应消息的格式包括：状态行、响应头、空行、消息体。每部分那些占一行。
+　　服务器接收处理完请求后返回一个 HTTP 响应消息给客户端。HTTP 响应消息的格式包括：状态行、响应头、空行、消息体。每部分内容占一行。
 
 　　状态行：有 HTTP 协议版本号、状态码和状态说明三部分构成。
 
@@ -219,7 +219,7 @@
 
 #### 7.4. 浏览器解析 html 代码，并请求 html 代码中的资源
 
-　　浏览器拿到 html 文件后，就开始解析其中的 html 代码，遇到 js/css/image 等静态资源时，向服务器发起一个 HTTP 请求，如果服务器端返回 304 状态吗（告诉浏览器服务器端没有修改该资源），那么浏览器会直接读取本地的该资源的缓存文件。否则开启新线程向服务器端区请求下载。
+　　浏览器拿到 html 文件后，就开始解析其中的 html 代码，遇到 js/css/image 等静态资源时，向服务器发起一个 HTTP 请求，如果服务器端返回 304 状态吗（告诉浏览器服务器端没有修改该资源），那么浏览器会直接读取本地的该资源的缓存文件。否则开启新线程向服务器端去请求下载。
 
 　　最后，浏览器利用自己内部的工作机制，把请求到的静态资源和 html 代码进行渲染，再呈现给用户。
 
@@ -236,7 +236,7 @@
 
 　　如果需要前面的信息，则前面的信息必须重传，这样可能导致每次连接传送的数据量增大，另一方面，在服务器不需要前面信息时，应答就较快。
 
-　　HTTP 的无状态性将协议设计为请求时建连接、请求完释放连接，以尽快将资源释放出来服务其他客户端。
+　　HTTP 的无状态性将协议设计为请求时建立连接、请求完释放连接，以尽快将资源释放出来服务其他客户端。
 
 ### 9. Session 和 Cookie 
 
@@ -257,7 +257,7 @@
 
 　　网络攻击的方式主要分为四类：
 
-1. 第一类是服务拒绝攻击，包括死亡之 ping（ping of death）、泪滴（teardrop）、UDP 洪水（UDP flood）、SYN 洪水（SYN flood）Land 攻击、Smurf 攻击、Fraggle 攻击、电子邮件炸弹、畸形消息攻击等。
+1. 第一类是服务拒绝攻击，包括死亡之 ping（ping of death）、泪滴（teardrop）、UDP 洪水（UDP flood）、SYN 洪水（SYN flood）、Land 攻击、Smurf 攻击、Fraggle 攻击、电子邮件炸弹、畸形消息攻击等。
 2. 第二类是利用型攻击，包括口令猜测、特洛伊木马、缓冲区溢出。
 3. 第三类是信息收集型攻击，包括地址扫描、端口扫描、慢速扫描、体系结构探测、DNS 域转换，Finger 服务，LDAP 服务等。
 4. 第四类是假消息攻击，主要包括：DNS 高速缓存污染，伪造电子邮件。
@@ -274,9 +274,9 @@
 
 ##### 10.1.3. 处理方法
 
-1. 扩展访问列表使防止 DOS 攻击的有效工具，例如 Show IP access-list。
+1. 扩展访问列表是防止 DOS 攻击的有效工具，例如 Show IP access-list。
 2. 让路由器具备 TCP 拦截功能，在对方发送数据流时可以很好的监控和拦截。
-3. 防止 DOS 攻击的根本时利用设备规则来合理的屏蔽持续的、高频度的数据冲击。
+3. 防止 DOS 攻击的根本是利用设备规则来合理的屏蔽持续的、高频度的数据冲击。
 4. 对用户操作进行记录，高于一定频率则禁封访问 IP。
 
 #### 10.2. ARP 攻击
