--- a/DataStructure/数据结构/树/树.md
+++ b/DataStructure/数据结构/树/树.md
@@ -1,12 +1,21 @@
 #  树
 
+## 1. 树
+
+### 1.1. 基本概念
+
+
+
 　　树
 
 ## 参考文章
 
+1. [数据结构--知识点总结--树](https://blog.csdn.net/void_worker/article/details/80919901)
+
+
+
 5. [从零开始学数据结构和算法(六)二叉排序树](https://juejin.im/post/5c9460e25188252d971438c4)
 6. [从零开始学数据结构和算法(七) huffman 树与 AVL 树](https://juejin.im/post/5c9464515188252d7e34df85)
-8. [数据结构--知识点总结--树](https://blog.csdn.net/void_worker/article/details/80919901)
 15. [数据结构与算法（七）树和二叉树](https://chiclaim.blog.csdn.net/article/details/80574803)
 16. [数据结构与算法（八）二分搜索树(Binary Search Tree)](https://chiclaim.blog.csdn.net/article/details/80598727)
 18. [数据结构与算法（十）线段树(Segment Tree)入门](https://chiclaim.blog.csdn.net/article/details/80643017)
